syntax = "proto3";

package io.harness.delegate;

option java_multiple_files = true;

message NgAccountId {
  string id = 1;
}